SIXTH-ADDED NOTES

--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
-<!--  -->
+<!-- NOTES
+
+git init        >>to initialize shit before it all starts
+
+git status      >>to show git status in temrs of where it's at (whether it's uploaded or not). can be typed always to figure out the status wherever stage you're at within project.
+
+code .          >>to open VS code that GIT is synchronized with
+
+git add .       >> to add files to the staging area
+
+git commit -m "first commit"    >> to commit the update, and giving it a name.
+git commit -m "second commit"   >> second commit. again giving it a name.
+              "third commit"
+              "many different commits, different names"
+
+git log --oneline       >> to check the log of all the hashcodes of what's committed with the updates.
+
+git checkout <hashtagNumber> index.html     >> to check out the one update as per index.html
+
+git reset HEAD index.html                   >>reseting it back to the head (most recent update)
+
+git checkout -- index.html                  >>checking to see if reset properly.
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,5 +36,6 @@
     <h3>GIT ADDED #3 ------ GET FUCKED NOW</h3>
     <h4> GIT ADDED 4 -- GET FUCKED moreeee plz</h4>
     <h5>GIT ADDED 5 -- ok don't get fucked</h5>
+    <h6>GIT ADDED 6 -- notes are now written</h6>
 </body>
 </html>
